	  redefined" warnings) (by Steve Hay) (ISHIGAKI)
	- Resolved #19445: unknown functions in Makefile.PL should fail.
	  and #19449: license is not found if unknown function is present
	  (both are the same issue) (ISHIGAKI)
	- Resolved #54890: MYMETA.yml creation doesn't work (by miyagawa)
	  (ISHIGAKI)
	- Resolved #55974: FakeAdmin does not define (by Francesc Guasch)
	  (ISHIGAKI)
	- Pass VERSION_FROM to EU::MM in the background to let it check
	  version integrity (ISHIGAKI)
	- Improved tests and removed unnecessary directories/files
	  (ISHIGAKI)

0.95 Wed 10 Mar 2010
	- Resolved #51614: POD nits (by Frank Wiegand) (ISHIGAKI)
	- Resolved #51077: auto_include_deps would mention the
	  (test|build)_requires version. (by Tokuhiro Matsuno) (ISHIGAKI)
	- Resolved #51267: Consider moving load checks to import so
	  require M::I will succeed (by David Golden) (ISHIGAKI)
	- Resolved #55050: Module::Install::AuthorTests is broken with
	  M::I 0.93 and 0.94 (by AEvar Arnfjord Bjarmason) (ISHIGAKI)
	- Resolved #16569: author should take array to match META.yml
	  spec and Module::Build (by MARKSTOS) (ISHIGAKI)
	- Resolved #53984: Don't use ExtUtils::Install to copy into blib
	  (by Michael G Schwern) (ISHIGAKI)
	- Resolved #17893: Module::Install::Share ignores MANIFEST
	  (ISHIGAKI)
	- Resolved #24194: Error msg: Your installer Makefile.PL has
	  a modification time in the future (by RSAVAGE) (ISHIGAKI)
	- Resolved #33976: cc_inc_paths replaces INC provided on command
	  line (by David Golden) (ISHIGAKI)
	- Resolved #25972: makemaker_args INSTALLDIRS => 'perl'; doesn't
	  work (by TELS) (ISHIGAKI)
	- Resolved #45978: .pm.PL runs in wrong order for WriteMakefile
	  (by Hilary Holz) (ISHIGAKI)
	- Resolved #19783: Query CPAN for new versions of Module::Install
	  during "make dist" (by Steffen Mueller) (ISHIGAKI)
	- Resolved #27242: Bug(s) in license_from() (by Steve Hay)
	  (ISHIGAKI)
	- Now license is properly passed to the EU::MM in the
	  background (ISHIGAKI)