@@ -15,6 +15,8 @@ Changes for Perl programming language extension Module-Install
 	  (ISHIGAKI)
 	- Resolved #55974: FakeAdmin does not define (by Francesc Guasch)
 	  (ISHIGAKI)
+	- Resolved #40230: test_requires and include (by Alexandr Ciornii)
+	  (ISHIGAKI)
 	- Pass VERSION_FROM to EU::MM in the background to let it check
 	  version integrity (ISHIGAKI)
 	- Improved tests and removed unnecessary directories/files
